--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-kakao-login": "^2.1.1",
     "react-router-dom": "^7.5.2"
   },
   "devDependencies": {
