--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-kakao-login": "^2.1.1",
     "react-router-dom": "^7.5.2",
     "tailwind-scrollbar-hide": "^2.0.0"
