--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           echo "VITE_KAKAO_CLIENT_ID=${{ secrets.KAKAO_CLIENT_ID }}" >> .env
           echo "VITE_KAKAO_CLIENT_JS_KEY=${{ secrets.KAKAO_CLIENT_JS_KEY }}" >> .env
+          echo "VITE_KAKAO_CLIENT_REST_API_KEY=${{ secrets.KAKAO_CLIENT_REST_API_KEY }}" >> .env
           echo "VITE_KAKAO_REDIRECT_URI=${{ secrets.KAKAO_REDIRECT_URI }}" >> .env
           echo "VITE_BACKEND_BASE_URL=${{ secrets.BACKEND_BASE_URL }}" >> .env
 
@@ -56,8 +57,8 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             echo "Stopping and removing existing containers..."
-            docker stop marong-frontend || true
-            docker rm marong-frontend || true
+            docker stop frontend || true
+            docker rm frontend || true
 
             echo "Authenticating to Artifact Registry..."
             gcloud auth configure-docker asia-northeast3-docker.pkg.dev
@@ -65,9 +66,13 @@ jobs:
             echo "Pulling latest Docker image..."
             docker pull ${{ secrets.GCP_ARTIFACT_REGISTRY_LOCATION }}/frontend:develop
 
+            echo "Create Docker Network..."
+            docker network create marong
+
             echo "Starting new container..."
             docker run -d \
-              --name marong-frontend \
+              --name frontend \
+              --network marong \
               -p 80:80 \
               ${{ secrets.GCP_ARTIFACT_REGISTRY_LOCATION }}/frontend:develop
 
