--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.2",
+    "@heroicons/react": "^2.2.0",
+    "@tanstack/react-query": "^5.79.0",
     "axios": "^1.9.0",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
